# cadcad-explorations

./: .gitignore  Dockerfile  LICENSE  README.md  dice.ipynb  pyproject.toml  requirements.txt
FinancialAccounting/: ToDoList.ipynb  pyproject.toml
UCLA-modeling/: glyceamia-exp2.ipynb
commons-config-dashboard/: models_test.ipynb
hatch/data/: IHPredictions.csv
hatch/tech/: tech.py
ltf/: 0-cashflow.ipynb  1-distributions.ipynb  2-business.ipynb  Distributions.ipynb  LTF-Demo-YGG-Curious-Rabbit.ipynb  cashflow.ipynb  complex_interest.ipynb  simulation-demonstration.ipynb  simulation.ipynb
ltf/parameters/: fixtures.py
ltf/stats/: EthBalancesBigQuery.ipynb  ExponentialDecay.ipynb  eth_balances_small.csv
ltf/templates/: ConstantProduct.ipynb  lbp-test.ipynb  lbp.py
luna-swarm/conviction-voting/: conviction-voting.ipynb
luna-swarm/honey-supply/: results.csv
octopus/: ControlSystem.ipynb  HauntedBathTubParamDynamic.ipynb  SymPy0.ipynb  Untitled.ipynb  agent-based-rabbits.ipynb  motivation-model.ipynb  simpy.py  synthesizer1.ipynb  synthesizer2.ipynb
octopus/web3api/: amberdata.ipynb
ohm/: realex_model-Copy1.ipynb  realex_model.ipynb
praise/: 1-ETL.ipynb  2-EDA.ipynb  3-twitter-panel.ipynb  3-ubi.ipynb  3-wage-deductions.ipynb  3-wordcount.ipynb  4-proposal.ipynb  README.md  clean-final.ipynb  deductions-audit.ipynb  no-abnormal-praisemageddon-resolution.ipynb  requirements.txt
praise/data/: Impact Hour Distribution analysis.xlsx  TEC Praise Quantification.xlsx
praise/development/: 3-twitter.ipynb
praise/outputs/: ALMOST-FINAL.csv  COMBINED-WINNING-PROPOSALS.csv  ORIGINAL-IMPACT-HOURS.csv  PRAISEMAGGEDON.csv  YGG-AUGMENTATION.csv  YGG-UBI-Augmentation.csv  YGG-WAGE-AUGMENTATION.csv  praise_data.csv  (+6 more)
(+1 files in other folders)
