[tool.poetry]
name = "cadcad-explorations"
version = "0.1.0"
description = ""
authors = ["Shawn Anderson <shawn@longtailfinancial.com>"]
readme = "README.md"
packages = [{include = "cadcad_explorations"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pandas = "^1.5.3"
numpy = "^1.24.2"
hvplot = "^0.8.2"
param = "^1.12.3"
panel = "^0.14.4"
ltfqia = "0.1.2"
scipy = "^1.10.1"
plotly = "^5.13.1"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
