[tool.poetry]
name = "financialaccounting"
version = "0.1.0"
description = "Elements of Financial Accounting Third Canadian Edition. Phillips, Libby, Libby, Mackintosh."
authors = ["Shawn Anderson <shawn@longtailfinancial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.2"
hvplot = "^0.8.2"
param = "^1.12.3"
panel = "^0.14.3"
jupyterlab = "3.6.0"
ipython = {git = "https://github.com/ipython/ipython.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
